# scr

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
nuget/: LICENSE.txt  choco_install.ps1  scanr.nuspec  verification.txt
nuget/tmp/: [Content_Types].xml
src/: args.rs  main.rs
src/util/: print.rs
wix/: License.rtf  main.wxs
