[package]
name = "scanr"
version = "0.1.0"
edition = "2021"

[[bin]]
name="scanr"
path= "src/main.rs"

[dependencies]
bisection = "0.1.0"
chrono = "0.4"
clap = {version="4.4.7", features = ["derive"] }
crossterm = "0.27.0"
futures = "0.3"
num-format="0.4.4"
sorted-vec = "0.8.3"
tokio = { version="1.33.0", features = ["full"] }
