[package]
authors = ["mrpsn"]
description = "A simple directory tree scanning utility."
name = "scanr"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name="scanr"
path= "src/main.rs"

[dependencies]
bisection = "0.1.0"
chrono = "0.4"
clap = {version="4.4.7", features = ["derive","cargo"] }
crossterm = "0.27.0"
futures = "0.3"
itertools = "0.12.0"
num-format="0.4.4"
sorted-vec = "0.8.3"
tokio = { version="1.33.0", features = ["full"] }
