[package]
authors = ["mrpsn"]
description = "A simple directory tree scanning utility."
name = "scanr"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name="scanr"
path= "src/main.rs"

[dependencies]
bisection = "0.1.0"
chrono = "0.4"
clap = {version="4.4.7", features = ["derive","cargo"] }
crossterm = "0.28.1"
futures = "0.3"
itertools = "0.12.0"
num-format="0.4.4"
ratatui = "0.29.0"
rayon = "1.11.0"
sorted-vec = "0.8.3"
sysinfo = "0.38.1"
tokio = { version="1.33.0", features = ["full"] }
